* Sale date is required only at confirmation
* warehouse is not always required

Version 2.2.0 - 2011-10-25
* Bug fixes (see mercurial logs for details)
* Add delivery time on product
* Use compute delivery date for stock moves
* Group stock moves on shipment using a key

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-13
* Bug fixes (see mercurial logs for details)
* Use a modelsingleton to define which sale sequence to use
* Add default search value on sale

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Add buttons to handle invoice and packing exceptions
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release