@@ -1,3 +1,4 @@
+* Add a Function field delivery_date to sale line
 * Sale date is required only at confirmation
 * warehouse is not always required
 
